--- a/mysql/tasks/main.yml
+++ b/mysql/tasks/main.yml
@@ -1,16 +1,16 @@
 ---
 # tasks file for mysql
 
-#- name: Installation of MySQL on Ubuntu  
-#  import_tasks: mysql_install_ubuntu.yml
-#  when: ansible_distribution == 'Ubuntu'
+- name: Installation of MySQL on Ubuntu  
+  import_tasks: mysql_install_ubuntu.yml
+  when: ansible_distribution == 'Ubuntu'
 
-#- name: Installaiton of MySQL on CentOS
-#  import_tasks: mysql_install_redhat.yml
-#  when: ansible_distribution == 'CentOS' or ansible_os_family == "RedHat" or ansible_os_family == "Amazon"
+- name: Installaiton of MySQL on CentOS
+  import_tasks: mysql_install_redhat.yml
+  when: ansible_distribution == 'CentOS' or ansible_os_family == "RedHat" or ansible_os_family == "Amazon"
 
-#- name: Installing MySQL-Python Dependencies
-#  import_tasks: python_dependencies.yml
+- name: Installing MySQL-Python Dependencies
+  import_tasks: python_dependencies.yml
 
 - name: MySQL Secure Installation
   import_tasks: mysql_secure_installation.yml
